# mcp-server-aws-ecs

./: README.md  pyproject.toml  read_server.py  server.py  write_server.py
src/: read_tools.py  write_tools.py
src/mcp_server_aws_ecs/: __init__.py  common.py  read.py  write.py
src/mcp_server_aws_ecs/servers/: __init__.py  full_server.py  read_server.py  write_server.py
