[project]
name = "mcp-server-aws-ecs"
version = "0.1.0"
description = "MCP Server for AWS ECS operations, provides tools for interacting with AWS ECS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["src"]
